--- a/ClientApp/styles/colorGame.css
+++ b/ClientApp/styles/colorGame.css
@@ -30,7 +30,6 @@
     margin-right: auto;
 	border: 1px solid black;
 	padding: 10px;
-	cursor: move;
     margin-bottom: 10px;
     height: 50px;
     clear: both;
@@ -47,6 +46,20 @@
     cursor: move;
     text-align: center;
     line-height: 40px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.answer-space {
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    border-bottom: 1px solid #333;
+    margin: 5px;
+    text-align: center;
+    line-height: 40px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #verify {
