added clickable cards to main menu WIP

--- a/ClientApp/styles/practicemodeStyles.css
+++ b/ClientApp/styles/practicemodeStyles.css
@@ -31,3 +31,10 @@ button:focus {
   .imgButton:hover{
     transform: rotate(360deg);
   }
+
+  a.fill-div {
+    display: block;
+    height: 100%;
+    width: 100%;
+    text-decoration: none;
+}
