--- a/ClientApp/styles/practicemodeStyles.css
+++ b/ClientApp/styles/practicemodeStyles.css
@@ -38,3 +38,16 @@ button:focus {
     width: 100%;
     text-decoration: none;
 }
+
+  h1 {
+    position: absolute;
+    top: 100px;
+    left: 50px;
+    border:3px solid #ff8dd7;
+    color: rgb(255, 255, 255); 
+    background-color: rgb(255, 173, 214); 
+    padding:15px; 
+    border-radius:10px; 
+    z-index: 1;
+
+  }
