--- a/ClientApp/styles/commonStyles.css
+++ b/ClientApp/styles/commonStyles.css
@@ -1,7 +1,19 @@
-h1 {color: rgb(118, 32, 239); align-content: center;}
-h2 {color: rgb(32, 239, 149);}
-
-.navbar-custom {
-    background-color:#e3f2fd;
+h1 {
+    color: rgb(118, 32, 239);
+    align-content: center;
 }
 
+h2 {
+    color: rgb(32, 239, 149);
+}
+
+.navbar-custom {
+    background-color: #e3f2fd;
+}
+
+.navbar-custom button {
+    background: transparent;
+    outline: none;
+    border: 0;
+    width: 60px;
+}
