--- a/ClientApp/styles/studyAnimals.css
+++ b/ClientApp/styles/studyAnimals.css
@@ -6,15 +6,13 @@ h1 {
     padding-top: 80px;
 }
 
-#PaletaDiv {
+#Animals {
     height: 480px;
-    width: 480px;
-    background-image: url("../resources/PaletaEstudio.png");
-    background-size: cover;
+    max-width: 1000px;
 }
 
-#PaletaDiv div {
-    width: 130px;
+#Animals div div {
+    width: 170px;
     text-align: center;
     color: black;
     margin-left: auto;
@@ -22,7 +20,15 @@ h1 {
     position: relative;
     padding: 10px;
     border-radius: 60px;
-    height: 110px;
+    height: 170px;
+}
+
+#Animals div .row {
+    height: 480px
+}
+
+#Animals img {
+    width: 150px;
 }
 
 .hover-text {
@@ -33,49 +39,19 @@ h1 {
     transition: opacity 0.5s ease-in-out;
     padding: 10px;
     border-radius: 60px;
-    width: 110px;
-    height: 90px;
+    width: 150px;
+    padding-top: 45px;
+    padding-bottom: 45px;
+    background-color: aliceblue;
+
+    position: relative;
+    bottom: 155px;
 }
 
 .hover-text:hover {
-    opacity: 1;
+    opacity: 0.8;
 }
 
-#green {
-    top: 145px;
-    right: 143px;
-    background-color: #009B51;
-}
-
-#red {
-    bottom: 70px;
-    right: 22px;
-    background-color: #FF473E;
-}
-
-#blue {
-    bottom: 120px;
-    left: 120px;
-    background-color: #0074A8;
-}
-
-#blue h3 {
-    color: aliceblue;
-}
-
-#yellow {
-    bottom: 85px;
-    left: 138px;
-    background-color: #FFD469;
-}
-
-#yellow h3 {
-    padding: 0px;
-    padding-top: 10px;
-}
-
-#white {
-    bottom: 100px;
-    left: 18.5px;
-    background-color: #FFFFFF;
+#lion .hover-text {
+    bottom: 140px;
 }
