Study mode - Numbers finished & Refactoring
Refactored some files and reorganized some others. Now the nav bars are consistent throughout the app, and are present where they weren't (they look a bit wierd on the games, but they work).

--- a/ClientApp/styles/loginStyle.css
+++ b/ClientApp/styles/loginStyle.css
@@ -1,3 +1,5 @@
+@import url("styles/commonStyles.css");
+
 * {
     background: #FFF8BB;
     font-size: xx-large;
@@ -14,7 +16,7 @@ fieldset#cuadrito1 {
     border-radius: 30px;
 }
 
-fieldset#cuadrito1 p{
+fieldset#cuadrito1 p {
     background: #E3A7FF;
     margin-top: 0%;
 }
