--- a/ClientApp/styles/practicemodeStyles.css
+++ b/ClientApp/styles/practicemodeStyles.css
@@ -1,3 +1,5 @@
+@import url("./commonStyles.css");
+
 button:focus {
   outline: none;
 }
@@ -9,7 +11,6 @@ button:focus {
 .gato:hover {
   transform: translateY(-70px);
 }
-
 
 .hover-text {
   position: absolute;
@@ -40,14 +41,14 @@ a.fill-div {
 }
 
 h1 {
-position: absolute;
-top: 100px;
-left: 50px;
-border:3px solid #ff8dd7;
-color: rgb(255, 255, 255); 
-background-color: rgb(255, 173, 214); 
-padding:15px; 
-border-radius:10px; 
-z-index: 1;
+  position: absolute;
+  top: 100px;
+  left: 50px;
+  border: 3px solid #ff8dd7;
+  color: rgb(255, 255, 255);
+  background-color: rgb(255, 173, 214);
+  padding: 15px;
+  border-radius: 10px;
+  z-index: 1;
 
 }
