--- a/ClientApp/styles/studyActivities/studyAnimals.css
+++ b/ClientApp/styles/studyActivities/studyAnimals.css
@@ -1,4 +1,4 @@
-@import url("./commonStyles.css");
+@import url("../commonStyles.css");
 
 h1 {
     color: rgb(51, 165, 171);
@@ -17,6 +17,7 @@ h1 {
     color: black;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 15px;
     position: relative;
     padding: 10px;
     border-radius: 60px;
