--- a/ClientApp/styles/studyActivities/studyColors.css
+++ b/ClientApp/styles/studyActivities/studyColors.css
@@ -1,4 +1,4 @@
-@import url("./commonStyles.css");
+@import url("../commonStyles.css");
 
 h1 {
     color: rgb(51, 165, 171);
@@ -6,14 +6,10 @@ h1 {
     padding-top: 80px;
 }
 
-h4 {
-    text-align: center;
-}
-
 #PaletaDiv {
     height: 480px;
     width: 480px;
-    background-image: url("../resources/PaletaEstudio.png");
+    background-image: url("../../resources/PaletaEstudio.png");
     background-size: cover;
 }
 
