--- a/ClientApp/styles/loginStyle.css
+++ b/ClientApp/styles/loginStyle.css
@@ -1,7 +1,7 @@
 @import url("styles/commonStyles.css");
 
 * {
-    background: #FFF8BB;
+    background-image: url("/MIAU/ClientApp/resources/Background.png");
     font-size: xx-large;
 }
 
@@ -53,8 +53,16 @@ fieldset#formnombre input#botoncico {
     border-radius: 30px;
 }
 
-img {
+img.Umberto  {
     position: absolute;
-    left: 1200px;
+    right: 5px;
     top: 500px;
+    z-index: 9999;
+}
+
+#burbuja {
+    position: absolute;
+    top: 370px;
+    width: 20%;
+    right: 10px;
 }
