--- a/ClientApp/styles/commonStyles.css
+++ b/ClientApp/styles/commonStyles.css
@@ -1,115 +1,145 @@
 h1 {
-    color: rgb(118, 32, 239);
-    align-content: center;
+  color: rgb(118, 32, 239);
+  align-content: center;
 }
 
 h2 {
-    color: rgb(32, 239, 149);
+  color: rgb(32, 239, 149);
 }
 
 h4 {
-    text-align: center;
+  text-align: center;
 }
 
 .navbar-custom {
-    background-color: #e3f2fd;
+  background-color: #e3f2fd;
 }
 
 body {
-    background-image: url('/MIAU/ClientApp/resources/Background.png');
-    background-attachment: fixed;
-    z-index: 0;
-    font-family: 'Raleway', sans-serif;
-    color: #333;
-    scrollbar-color: #ffa3d1 #fff;
-    scrollbar-base-color: #ff8dd7;
-  }
+  background-image: url('../resources/Background.png');
+  background-attachment: fixed;
+  z-index: 0;
+  font-family: 'Raleway', sans-serif;
+  color: #333;
+  scrollbar-color: #ffa3d1 #fff;
+  scrollbar-base-color: #ff8dd7;
+}
 
 .navbar-custom button {
-    background: transparent;
-    outline: none;
-    border: 0;
-    width: 60px;
+  background: transparent;
+  outline: none;
+  border: 0;
+  width: 60px;
 }
 
 .bubble2 {
-    position: fixed;
-    top: 25%;
-    right: 3%;
-    z-index: 9999;
-    width: 25%;
-    min-width: 25%;
-    height: 15%;
-  }
-  
-  .bubble2 img {
-    max-width: 90%; /* ajusta el valor para cambiar el tamaño de la imagen */
-    min-height: 90%;
+  position: fixed;
+  top: 25%;
+  right: 3%;
+  z-index: 9999;
+  width: 25%;
+  min-width: 25%;
+  height: 15%;
+}
+
+.bubble2 img {
+  max-width: 90%;
+  /* ajusta el valor para cambiar el tamaño de la imagen */
+  min-height: 90%;
+}
+
+.gatito {
+  position: fixed;
+  bottom: -10px;
+  left: 10px;
+  z-index: 9999;
+}
+
+.bubble {
+  position: fixed;
+  top: 50%;
+
+  z-index: 9999;
+  width: 25%;
+  min-width: 25%;
+  height: 15%;
+}
+
+.bubble.der {
+  right: 5%;
+}
+
+.bubble.izq {
+  left: 5%;
+}
+
+.bubble img {
+  max-width: 90%;
+  /* ajusta el valor para cambiar el tamaño de la imagen */
+  min-height: 90%;
+}
+
+
+
+.salta2 {
+  animation: salta2 1s linear infinite;
+}
+
+
+@keyframes salta2 {
+  0% {
+    transform: translateY(0) rotate(180deg) scaleX(-1);
   }
 
-  .gatito {
-    position: fixed;
-    bottom: -10px;
-    left: 10px;
-    z-index: 9999;
-  }
-  
-  .bubble {
-    position: fixed;
-    top: 50%;
-
-    z-index: 9999;
-    width: 25%;
-    min-width: 25%;
-    height: 15%;
+  25% {
+    transform: translateY(20px) rotate(180deg) scaleX(-1);
   }
 
-  .bubble.der {
-    right: 5%;
+  50% {
+    transform: translateY(0) rotate(180deg) scaleX(-1);
   }
 
-  .bubble.izq {
-    left: 5%;
-  }
-  
-  .bubble img {
-    max-width: 90%; /* ajusta el valor para cambiar el tamaño de la imagen */
-    min-height: 90%;
-  }
-  
-  
-  
-  .salta2 {
-    animation: salta2 1s linear infinite;
-  }
-  
-  
-  @keyframes salta2 {
-    0% { transform: translateY(0) rotate(180deg) scaleX(-1);}
-    25% { transform: translateY(20px) rotate(180deg) scaleX(-1);}
-    50% { transform: translateY(0) rotate(180deg) scaleX(-1);}
-    75% { transform: translateY(20px) rotate(180deg) scaleX(-1);}
-    100% { transform: translateY(0) rotate(180deg) scaleX(-1);}
-  }
-  
-  .salta {
-    animation: salta 1s linear infinite;
+  75% {
+    transform: translateY(20px) rotate(180deg) scaleX(-1);
   }
 
-  @keyframes salta {
-    0% { transform: translateY(0);}
-    25% { transform: translateY(20px);}
-    50% { transform: translateY(0);}
-    75% { transform: translateY(20px);}
-    100% { transform: translateY(0);}
+  100% {
+    transform: translateY(0) rotate(180deg) scaleX(-1);
   }
-  
+}
+
+.salta {
+  animation: salta 1s linear infinite;
+}
+
+@keyframes salta {
+  0% {
+    transform: translateY(0);
+  }
+
+  25% {
+    transform: translateY(20px);
+  }
+
+  50% {
+    transform: translateY(0);
+  }
+
+  75% {
+    transform: translateY(20px);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
+}
+
 .progress {
-    width: 600px;
-    margin: auto;
+  width: 600px;
+  margin: auto;
 }
 
 .bg-image {
-    background-image: url('../resources/Background.png');
-    height: 100vh;
+  background-image: url('../resources/Background.png');
+  height: 100vh;
 }
