--- a/ClientApp/styles/studyActivities/studyAnimals.css
+++ b/ClientApp/styles/studyActivities/studyAnimals.css
@@ -56,3 +56,23 @@ h1 {
 #lion .hover-text {
     bottom: 140px;
 }
+
+div button.paramostraranimals {
+    background-color: #85d8e8;
+    height: 130px;
+    width: 550px;
+
+    font-size: 40px;
+    font-weight: 400;
+    line-height: 50px;
+    letter-spacing: 0em;
+    text-align: center;
+    align-self: center;
+}
+
+
+div#pamostraranimals {
+    position: absolute;
+    top: 50%;
+    left:35%;
+}
