--- a/ClientApp/styles/studyActivities/studyColors.css
+++ b/ClientApp/styles/studyActivities/studyColors.css
@@ -118,3 +118,23 @@ h1 {
     left: 18.5px;
     background-color: rgb(137, 137, 137);
 }
+
+div button.paramostrarcolors {
+    background-color: #85d8e8;
+    height: 130px;
+    width: 550px;
+
+    font-size: 40px;
+    font-weight: 400;
+    line-height: 50px;
+    letter-spacing: 0em;
+    text-align: center;
+    align-self: center;
+}
+
+
+div#pamostrarcolors {
+    position: absolute;
+    top: 50%;
+    left:35%;
+}
