--- a/ClientApp/styles/studyActivities/studyNumbers.css
+++ b/ClientApp/styles/studyActivities/studyNumbers.css
@@ -56,3 +56,23 @@ h1 {
 #n10 .hover-text {
     bottom: 130px;
 }
+
+div button.paramostrarnumber {
+    background-color: #85d8e8;
+    height: 130px;
+    width: 550px;
+
+    font-size: 40px;
+    font-weight: 400;
+    line-height: 50px;
+    letter-spacing: 0em;
+    text-align: center;
+    align-self: center;
+}
+
+
+div#pamostrarnumber {
+    position: absolute;
+    top: 50%;
+    left:35%;
+}
