--- a/ClientApp/styles/generalGameStyles.css
+++ b/ClientApp/styles/generalGameStyles.css
@@ -1,10 +1,14 @@
 @import url("./commonStyles.css");
 
+h2 {
+    font-size: larger !important;
+}
+
 #game-container {
     width: 500px;
     margin: 0 auto;
     text-align: center;
-    padding-top: 80px;
+    padding-top: 100px;
 }
 
 #color-display {
