--- a/ClientApp/styles/generalGameStyles.css
+++ b/ClientApp/styles/generalGameStyles.css
@@ -75,3 +75,14 @@ h2 {
     margin-right: auto;
     margin-top: 20px;
 }
+
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    border: none;
+}
