Todos los audios funcionan

--- a/ClientApp/styles/studyActivities/studyColors.css
+++ b/ClientApp/styles/studyActivities/studyColors.css
@@ -132,9 +132,15 @@ div button.paramostrarcolors {
     align-self: center;
 }
 
-
 div#pamostrarcolors {
     position: absolute;
     top: 50%;
     left:35%;
+}
+
+button.audios img{
+    position: relative;
+    left:80%;
+    width: 9px;
+    height: 9px;
 }
