--- a/ClientApp/styles/indexStyle.css
+++ b/ClientApp/styles/indexStyle.css
@@ -1,61 +1,18 @@
-@import url(commonStyles.css);
+@import url("commonStyles.css");
 
 
-
-body {
-    position: relative;
-    left: 560px;
-    top: 180px;
-    width: 500px;
-    align-self: center;
-}
-
-img {
-    position: relative;
-    left: -100px;
-    width: 600px;
-    top: -20px;
-}
-
-fieldset#titulico {
-    background-color: rgb(255, 136, 196);
-    position: relative;
-    left: -34px;
-    top: -10px;
-    font-size: x-large;
-    width: 425px;
-    height: 80px;
+#tarjeta{
+    margin-top: 15%;
     border-radius: 10px;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+  }
+  
+#cabecera {
+    background-color: rgb(227, 167, 255);
 }
 
-fieldset#linkecito {
-    position: relative;
-    left: 32px;
-    top: 30px;
-    width: 30px;
-    height: 50px;
-    background: #C4F1FF;
-    box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 10px;
-    align-content: center;
-}
-
-button {
-    width: 300px;
-    height: 50px;
-    border-radius: 50px;
-    font-size: xx-large;
-    color: rgb(27, 5, 9);
-    border: 1px solid #2e518b;
-    /*anchura, estilo y color borde*/
-    padding: 10px;
-    /*espacio alrededor texto*/
-    background-color: #96e6ff;
-    /*color botón*/
-    text-transform: uppercase;
-    /*capitalización texto*/
-}
-
-h3 {
-    background-color: rgb(255, 136, 196);
+#Empezar {
+    max-width: 50%;
+    max-height: 50%;
+    border-radius: 40px;
 }
