Upgraded responsiveness and accessibility of studyMode

--- a/ClientApp/styles/commonStyles.css
+++ b/ClientApp/styles/commonStyles.css
@@ -73,9 +73,11 @@ body {
 }
 
 .bubble img {
+  /*
   max-width: 90%;
   /* ajusta el valor para cambiar el tamaño de la imagen */
-  min-height: 90%;
+  /*min-height: 90%;
+  */
 }
 
 
