--- a/ClientApp/styles/studyMode.css
+++ b/ClientApp/styles/studyMode.css
@@ -11,6 +11,7 @@
 #button-cont button {
     z-index: 10;
     background-color: #85d8e8;
+    color: #ae0505;
     min-height: 130px;
     height: auto;
     max-width: 550px;
