--- a/ClientApp/styles/studyActivities/studyColors.css
+++ b/ClientApp/styles/studyActivities/studyColors.css
@@ -138,3 +138,10 @@ div#pamostrarcolors {
     left:35%;
 }
 
+#PaletaDiv div p {
+    font-size: 21pt;
+}
+
+.blue p, .black p{
+    color: #ffffff;
+}
