--- a/ClientApp/styles/studyActivities/studyNumbers.css
+++ b/ClientApp/styles/studyActivities/studyNumbers.css
@@ -64,8 +64,10 @@ h2 {
 
 div button.paramostrarnumber {
     background-color: #85d8e8;
-    height: 130px;
-    width: 550px;
+    min-height: 130px;
+    max-width: 550px;
+
+    width: 60vw;
 
     font-size: 40px;
     font-weight: 400;
@@ -75,11 +77,15 @@ div button.paramostrarnumber {
     align-self: center;
 }
 
-
 div#pamostrarnumber {
     position: absolute;
-    top: 50%;
-    left: 35%;
+    top: 40%;
+    left: 15vw;
+    right: 15vw;
+    min-height: 130px;
+    max-width: 550px;
+
+    width: 60vw;
 }
 
 p {
