Improved reactiveness of games

--- a/ClientApp/styles/generalGameStyles.css
+++ b/ClientApp/styles/generalGameStyles.css
@@ -5,7 +5,9 @@ h2 {
 }
 
 #game-container {
-    width: 600px;
+    max-width: 600px;
+    width: 40vw;
+    min-width: 420px;
     margin: 0 auto;
     text-align: center;
     padding-top: 100px;
@@ -85,4 +87,8 @@ h2 {
     overflow: hidden;
     clip: rect(0, 0, 0, 0);
     border: none;
+}
+
+.progress {
+    max-width: 98vw;
 }
