--- a/ClientApp/styles/generalGameStyles.css
+++ b/ClientApp/styles/generalGameStyles.css
@@ -20,6 +20,13 @@ h2 {
     clear: both;
 }
 
+#animal-display,
+#number-display {
+    width: 205px;
+    height: auto;
+}
+
+
 #letters {
     display: flex;
     margin-left: auto;
