--- a/ClientApp/styles/mainMenu.css
+++ b/ClientApp/styles/mainMenu.css
@@ -33,6 +33,11 @@ h1 {
   z-index: 1;
 }
 
+#umberto-wrapper,
+#background {
+  height: fit-content;
+}
+
 .umberto-wrapper {
   position: relative;
   left: 0;
